--- a/main.html
+++ b/main.html
@@ -10,7 +10,19 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h3>Shopping List</h3>
+	<ol>
+		<li>watch</li>
+		<li>play station</li>
+		<li>scooty</li>
+	</ol>
 
+	<h3>holiday list</h3>
+	<ul>
+		<li>ladakh</li>
+		<li>norway</li>
+		<Li>japan</Li></Li>
+	</ul>
 </body>
 
 </html>
