--- a/main.html
+++ b/main.html
@@ -10,17 +10,16 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	
+	<h3> ShoppingList</h3>
 	<ol >
-            ShoppingList	
 		<li>watch</li>
 		<li>play station</li>
 		<li>scooty</li>
 	</ol>
 
-
+<h3></h3>holidayList</h3>
 	<ul>
-		holidayList
+	
 		<li>ladakh</li>
 		<li>norway</li>
 		<Li>japan</Li></Li>
