--- a/main.html
+++ b/main.html
@@ -17,10 +17,9 @@
 		<li>scooty</li>
 	</ol>
 
-<h3></h3>holidayList</h3>
+<h3>holidayList</h3>
 	<ul>
-	
-		<li>ladakh</li>
+    	<li>ladakh</li>
 		<li>norway</li>
 		<Li>japan</Li></Li>
 	</ul>
