--- a/main.html
+++ b/main.html
@@ -10,14 +10,14 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<h3> ShoppingList</h3>
+	<p> ShoppingList</p>
 	<ol >
 		<li>watch</li>
 		<li>play station</li>
 		<li>scooty</li>
 	</ol>
 
-<h3>holidayList</h3>
+<p>holidayList</p>
 	<ul>
     	<li>ladakh</li>
 		<li>norway</li>
