--- a/main.html
+++ b/main.html
@@ -12,16 +12,16 @@
 </script>
 	<p> ShoppingList</p>
 	<ol >
-		<li>watch</li>
-		<li>play station</li>
-		<li>scooty</li>
+		<li data-watch-type="watch">watch</li>
+		<li data-watch-type="play station">play station</li>
+		<li data-watch-type="scooty">scooty</li>
 	</ol>
 
 <p>holidayList</p>
 	<ul>
-    	<li>ladakh</li>
-		<li>norway</li>
-		<Li>japan</Li></Li>
+    	<li data-watch-type="ladakh">ladakh</li>
+		<li data-watch-type="norway">norway</li>
+		<Li data-watch-type="japan">japan</Li></Li>
 	</ul>
 </body>
 
