--- a/main.html
+++ b/main.html
@@ -12,16 +12,16 @@
 </script>
 	<p> ShoppingList</p>
 	<ol >
-		<li data-shoppingList-type="watch">watch</li>
-		<li data-shopingLst-type="play station">play station</li>
-		<li data-shopingList-type="scooty">scooty</li>
+		<li data-ns-test="watch">watch</li>
+		<li data-ns-test="play station">play station</li>
+		<li data-ns-test="scooty">scooty</li>
 	</ol>
 
 <p>holidayList</p>
 	<ul>
-    	<li data-holidayList-type="ladakh">ladakh</li>
-		<li data-holidayList-type="norway">norway</li>
-		<Li data-holidayList-type="japan">japan</Li></Li>
+    	<li data-ns-test="ladakh">ladakh</li>
+		<li data-ns-test="norway">norway</li>
+		<Li data-ns-test="japan">japan</Li></Li>
 	</ul>
 </body>
 
