--- a/main.html
+++ b/main.html
@@ -12,15 +12,15 @@
 </script>
 	
 	<ol >
-		<li data-ns-test="watch">watch</li>
-		<li data-ns-test="play station">play station</li>
-		<li data-ns-test="scooty">scooty</li>
+		<li data-ns-test="shoppingList">watch</li>
+		<li data-ns-test="shoppingList ">play station</li>
+		<li data-ns-test="shoppingList">scooty</li>
 	</ol>
 
 	<ul>
-    	<li data-ns-test="ladakh">ladakh</li>
-		<li data-ns-test="norway">norway</li>
-		<Li data-ns-test="japan">japan</Li></Li>
+    	<li data-ns-test="holidayList">ladakh</li>
+		<li data-ns-test="holidayList">norway</li>
+		<Li data-ns-test="holidayList">japan</Li></Li>
 	</ul>
 </body>
 
