--- a/main.html
+++ b/main.html
@@ -13,14 +13,14 @@
 	
 	<ol >
 		<li data-ns-test="shoppingList">watch</li>
-		<li data-ns-test="shoppingList ">play station</li>
+		<li data-ns-test="shoppingList">play station</li>
 		<li data-ns-test="shoppingList">scooty</li>
 	</ol>
 
 	<ul>
     	<li data-ns-test="holidayList">ladakh</li>
 		<li data-ns-test="holidayList">norway</li>
-		<Li data-ns-test="holidayList">japan</Li></Li>
+		<Li data-ns-test="holidayList">japan</Li>
 	</ul>
 </body>
 
